apps/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
  annotations:
    tailscale.com/manage: "true"
    tailscale.com/hostname: registry
spec:
  type: NodePort
  selector:
    app: registry
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      nodePort: 30500
