apps/registry/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
spec:
  tls:
    - hosts:
        - registry.lab.danielsson.us.com
      secretName: registry-secret-tls
  rules:
    - host: registry.lab.danielsson.us.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: registry-service
                port:
                  number: 5000
